refactor: Changed small methods to inline. Added -O3 flag

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,5 @@ lib_deps =
 	thomasfredericks/Bounce2@^2.71
 	waspinator/AccelStepper@^1.61
 monitor_speed = 115200
+build_flags = -O3
+build_unflags = -Os
