feat: V1.0.0 pre-release. Added EEPROM configuration. Multithread processing to avoid stops in motor pulses. Some fixes around encoder sensor. Tested but not mounted in final machine.

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+build_type = debug
 lib_deps = 
 	olikraus/U8g2@^2.33.9
 	SPI
@@ -22,3 +23,4 @@ lib_deps =
 monitor_speed = 115200
 build_flags = -O3
 build_unflags = -Os
+monitor_filters = esp32_exception_decoder
