--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-build_type = debug
+build_type = release
 lib_deps = 
 	olikraus/U8g2@^2.33.9
 	SPI
@@ -24,3 +24,4 @@ monitor_speed = 115200
 build_flags = -O3
 build_unflags = -Os
 monitor_filters = esp32_exception_decoder
+board_build.f_cpu = 240000000
